// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nav component renders Nav component as a snapshot without user 1`] = `
<div
  className="navContainer"
>
  <div>
    <a
      href="/"
      onClick={[Function]}
    >
      <img
        alt="Vision"
        src=""
      />
      <p>
        Vision
      </p>
    </a>
    <nav>
      <ul>
        <li>
          <a
            className="signIn"
            href="/signIn"
            onClick={[Function]}
          >
            Register / Sign In
          </a>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`Nav component renders Nav component with logged-in user as a snapshot 1`] = `
<div
  className="navContainer"
>
  <div>
    <a
      href="/"
      onClick={[Function]}
    >
      <img
        alt="Vision"
        src=""
      />
      <p>
        Vision
      </p>
    </a>
    <nav>
      <ul>
        <li>
          <a
            href="/write"
            onClick={[Function]}
          >
            Write
          </a>
        </li>
        <li>
          <a
            href="/member"
            onClick={[Function]}
          >
            Member
          </a>
        </li>
        <li>
          <a
            href="/"
            onClick={[Function]}
          >
            Sign out
          </a>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;
